update block spacing and fix variable name bug
Update the amount of space between blocks to hopefully fix the
ball-phasing-through-blocks issue. Fix a reference to an old variable
name that caused game-over screen not to work properly.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-  margin: 1em;
+  margin: 0.5em;
   padding: 0;
 }
 canvas {
